[build-system]
requires = ["setuptools>=41", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "ask-bedrock"
dynamic = ["version"]
description = 'Converse with your favorite Amazon Bedrock LLM from the command line.'
readme = "README.md"
authors = [
    {name='Ulrich Hinze', email = 'uhinze@amazon.de'},
    {name='Alexander Günsche', email = 'lxg@amazon.de'},
]
keywords = ["ask-bedrock","GenAI","Bedrock","AWS"]
classifiers=[
"Development Status :: 4 - Beta",
"Topic :: Utilities",
]
dependencies = [
    "click",
    "pyyaml",
    "boto3>=1.28.57",
    "langchain>=0.0.309",
    ]
requires-python = ">=3.9"

[project.scripts]
ask-bedrock = "ask_bedrock.main:cli"

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.post{timestamp}"